force-app/main/default/objects/PBS_Lease_Access__c/PBS_Lease_Access__c.object-meta.xml
<CustomObject>
    <label>PBS Lease Access</label>
    <nameField>
        <displayFormat>LA-{00000}</displayFormat>
        <label>PBS Lease Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS Lease Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>