force-app/main/default/objects/PBS_Lease_Access__c/fields/Building_POC__c.field-meta.xml
<CustomField>
    <fullName>Building_POC__c</fullName>
    <formula>PBS_Lease__r.LSR_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building_POC</label>
    <type>Text</type>
</CustomField>