force-app/main/default/objects/PBS_Lease_Access__c/fields/PBS_Lease__c.field-meta.xml
<CustomField>
    <fullName>PBS_Lease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBS Lease</label>
    <referenceTo>PBS_Lease__c</referenceTo>
    <relationshipLabel>PBS Lease Access</relationshipLabel>
    <relationshipName>PBS_Lease_Access</relationshipName>
    <type>Lookup</type>
</CustomField>