force-app/main/default/objects/PBS_Lease_Access__c/fields/PBS_OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>PBS_OwnerEmail__c</fullName>
    <label>PBS Lease Owner Email</label>
    <type>Email</type>
</CustomField>