force-app/main/default/objects/PBS_Lease_Access__c/fields/Requestor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Comments__c</fullName>
    <label>Requestor Comments</label>
    <type>TextArea</type>
</CustomField>