force-app/main/default/objects/PBS_Lease_Access__c/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <formula>Requestor__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Email</label>
    <type>Text</type>
</CustomField>