force-app/main/default/objects/PBS_Lease_Access__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
                <isActive>false</isActive>
                <label>Denied</label>
            </value>
            <value>
                <fullName>Requested</fullName>
                <isActive>false</isActive>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Revoked</fullName>
                <isActive>false</isActive>
                <label>Revoked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>